# crate

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
cmake/patches/: brotli-disable-tools.patch  libarchive-cmake-compat.patch  xz-disable-tools.patch  zstd-cmake-compat.patch
docs/: FLOPPY_IMAGE.md  NEUTRINO_CMAKE.md  PROPOSAL.md  STREAMING_INTERFACE.md
examples/: CMakeLists.txt  example.cc
include/crate/: crate.hh
include/crate/compression/: brotli.hh  bzip2.hh  diet.hh  explode.hh  inflate.hh  kwaj.hh  streams.hh  szdd.hh  xz.hh  zstd.hh
include/crate/core/: decompressing_stream.hh  decompressor.hh  error.hh  expected.hh  system.hh  types.hh  vfs.hh
include/crate/formats/: ace.hh  arc.hh  archive.hh  arj.hh  cab.hh  chm.hh  floppy.hh  ha.hh  hyp.hh  kwaj.hh  lha.hh  libarchive_archive.hh  rar.hh  stuffit.hh  szdd.hh  zip.hh  zoo.hh
src/crate/: CMakeLists.txt  crate.cc
src/crate/compression/: ace_lz.cc  arc_lzw.cc  arj_lz.cc  brotli.cc  bzip2.cc  decompressing_stream.cc  decompressor.cc  diet.cc  explode.cc  ha.cc  hyp.cc  inflate.cc  kwaj.cc  lha_new.cc  lzh.cc  lzss.cc  lzx.cc  mszip.cc  quantum.cc  rar5.cc  rar_15.cc  rar_29.cc  rar_filters.cc  rar_ppm.cc  rar_unpack.cc  rnc.cc  streams.cc  stuffit_arsenic.cc  stuffit_huffman.cc  stuffit_lzw.cc  stuffit_method13.cc  stuffit_rle.cc  szdd.cc  xz.cc  zoo_lzw.cc  zstd.cc
src/crate/core/: bitstream.cc  crc.cc  error.cc  huffman.cc  lru_cache.cc  path.cc  system.cc  types.cc
src/crate/crypto/: aes_decoder.cc  rar_crypt.cc  sha.cc
src/crate/formats/: ace.cc  arc.cc  archive.cc  arj.cc  cab.cc  chm.cc  ha.cc  hyp.cc  kwaj.cc  lha.cc  libarchive_archive.cc  rar.cc  stuffit.cc  szdd.cc  zip.cc  zoo.cc
src/crate/fs/: fat_bpb.cc  fat_directory.cc  fat_table.cc  floppy.cc
src/crate/include/: miniz_export.h
src/crate/include/crate/compression/: ace_lz.hh  arc_lzw.hh  arj_lz.hh  ha.hh  hyp.hh  lha_new.hh  lzh.hh  lzss.hh  lzx.hh  mszip.hh  quantum.hh  rar5.hh  rar_15.hh  rar_29.hh  rar_common.hh  rar_filters.hh  rar_ppm.hh  rar_unpack.hh  rnc.hh  stuffit_arsenic.hh  stuffit_huffman.hh  stuffit_lzw.hh  stuffit_method13.hh  stuffit_rle.hh  zoo_lzw.hh
src/crate/include/crate/core/: bitstream.hh  crc.hh  huffman.hh  lru_cache.hh  path.hh
src/crate/include/crate/crypto/: aes_decoder.hh  rar_crypt.hh  sha.hh
src/crate/include/crate/formats/: arc_internal.hh  hyp_internal.hh
src/crate/include/crate/fs/: fat_bpb.hh  fat_directory.hh  fat_table.hh
src/crate/vfs/: vfs.cc
test/: CMakeLists.txt  test_ace.cc  test_arc.cc  test_arj.cc  test_bitstream.cc  test_cab.cc  test_chm.cc  test_config.hh.in  test_crate.cc  test_diet.cc  test_explode.cc  test_floppy.cc  test_ha.cc  test_huffman.cc  test_hyp.cc  test_istream.cc  test_kwaj.cc  test_lha.cc  test_libarchive.cc  test_lzss.cc  test_lzx.cc  test_lzx_quantum_streaming.cc  test_mszip.cc  test_progress.cc  test_rar.cc  test_rar_corpus.cc  test_rar_streaming.cc  test_rnc.cc  test_streaming.hh  test_stuffit.cc  test_szdd.cc  test_vfs.cc  test_zip.cc  test_zoo.cc
testdata/: MANIFEST.txt
testdata/chm/reference/main/: SYSTEM  main.hhc
testdata/chm/reference/second/: SYSTEM  second.hhc
testdata/floppy/: Borland - Turbo Pascal v5.0 - Disk 1 of 3 - Install & Compiler.img  Borland - Turbo Pascal v5.0 - Disk 2 of 3 - Help & Utilities.img  Borland - Turbo Pascal v5.0 - Disk 3 of 3 - BGI, Demos, Doc, & Turbo3.img
testdata/rar/: solid_test.rar
testdata/rnc/: expected_large.txt  expected_output.txt  test_large_m1.rnc  test_method1.rnc  test_method2.rnc
testdata/stuffit/: sample_addres.sit  sample_clrmg131.sit  sample_fixer.sit  test_complex.sit  test_deflate.sit  test_m0.sit  test_m13.sit  testfile_lzw.sit
testdata/xz/: LICENSE.xz
testdata/zstd/: LICENSE.zst
